--- a/events/css/base.css
+++ b/events/css/base.css
@@ -124,7 +124,7 @@ main {
 }
 
 
-@media screen and (max-width: 25em) {
+@media screen and (max-width: 55em) {
 	body {
 		overflow: auto;
 	}
@@ -147,7 +147,7 @@ main {
 	}
 	
 	main{
-		margin-top: -40%;
+		margin-top: -20vh;
 	}
 }
 
