--- a/team/css/set1.css
+++ b/team/css/set1.css
@@ -14,7 +14,9 @@
 body{
 	background: url('../img/bg.jpg');
 	background-size: cover;
+	background-attachment: fixed
 }
+
 
 .grid {
 	position: relative;
@@ -31,12 +33,13 @@ body{
 	float: left;
 	overflow: hidden;
 	margin: 10px 1%;
-	min-width: 300px;
+	width: 280px;
 	max-width: 350px;
-	max-height: 360px;
+	height: 280px;
+	max-height: 350px;
 	text-align: center;
 	cursor: pointer;
-	margin-left: 1.5em
+	margin-left: 2em
 }
 
 .grid figure img {
@@ -48,10 +51,10 @@ body{
 }
 
 .grid figure figcaption {
-	padding: 2em;
+	padding: 1em;
 	color: #fff;
-	text-transform: uppercase;
-	font-size: 1.25em;
+	/*text-transform: uppercase;*/
+	font-size: 1.3em;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
@@ -107,14 +110,14 @@ body{
 figure.effect-chico img {
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: scale(1.12);
-	transform: scale(1.12);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 figure.effect-chico:hover img {
 	opacity: 0.5;
-	-webkit-transform: scale(1);
-	transform: scale(1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 figure.effect-chico figcaption {
