--- a/index/css/demo.css
+++ b/index/css/demo.css
@@ -6,11 +6,7 @@
 }
 
 body {
-	font-family: 'Roboto', 'Avenir Next', sans-serif;
-	color: #fff;
-	background: #333;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	
 	overflow: hidden;
 }
 
@@ -299,4 +295,13 @@ body #cdawrap a.carbon-poweredby:hover {
 		margin-bottom: 4em;
 		text-align: center;
 	}
+}
+
+
+.slogan{
+	font-family:Freckle Face;
+	color:white;
+	letter-spacing:0.5vw;
+	font-size:3vw;
+	font-weight:300
 }
