--- a/subevents/rangmanch/css/footer.css
+++ b/subevents/rangmanch/css/footer.css
@@ -1,8 +1,9 @@
 footer{
-    background-color:#001228
+    margin-top: 5vh;
+    background-color:#1e2023
 }
 .logo_contact_div{
-    margin-top: 20px;
+    margin-top: 30px;
     color: white;
 }
 a{
