--- a/events/css/slider.css
+++ b/events/css/slider.css
@@ -32,8 +32,8 @@
 /* Canvas with viewport width and height */
 .js .pieces-slider__canvas {
 	position: relative;
-	width: 100vw;
-	height: 100vh;
+	width: 95vw;
+	height: 95vh;
 	transition: 0.2s opacity;
 }
 
@@ -49,8 +49,8 @@
 	left: 0;
 	top: 50%;
 	width: auto;
-	height: 100px;
-	margin: -25px 0 0 0;
+	height: 70px;
+	margin: -25px -25px -25px -25px;
 	color: #fff;
 	font-family: inherit;
 	font-weight: bold;
@@ -61,7 +61,11 @@
 
 .pieces-slider__button--next {
 	left: auto;
-	right: 0;
+	right: 10px;
+}
+
+.pieces-slider__button--prev {
+	left: 10px;
 }
 
 /* Hide the buttons when no JS */
@@ -78,11 +82,12 @@
 
 @media screen and (max-width: 55em) {
 	.pieces-slider__canvas {
-		width: 100vw;
-		height: 100vw;
+		width: 95vw;
+		height: 95vw;
 	}
 	.pieces-slider__button {
-		width: 60px;
-		height: 60px;
+		width: 50px;
+		height: 50px;
+		margin: -25px 0 0 0 ;
 	}
 }
