--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer{
     margin-top: 5vh;
-    background-color:#1e2023
+    background-color:#1e2023;
 }
 .logo_contact_div{
     margin-top: 30px;
@@ -17,21 +17,24 @@ a:hover{
 }
 a:active{
     color:yellow;
+    text-decoration: none;
 }
 a:visited{
     color: white;
+    text-decoration: none;
 }
 .logo{
     margin-top: 30px;
     color: white;
     border: solid white 1px;
+    background-color: #1e2023;
     border-radius: 5px;
     cursor: pointer;
     padding: 5px;
     font-size: 30px;
 }
 .logo:hover a{
-    color:#001228;
+    color:#1e2023;
 }
 .logo:hover{
     background-color: white;
@@ -41,7 +44,11 @@ ul{
     line-height: 28px;
 }
 .footer_links:hover{
-    color:#043674
+    color: orangered;
+}
+.footer_links:focus{
+    color: orangered;
+    text-decoration: none;
 }
 #title{
     margin-left: 20px;
