--- a/css/demo.css
+++ b/css/demo.css
@@ -20,31 +20,23 @@ src: url('flesh.TTF');
 }
 
 .btn {
-	display: inline-block;
 	cursor: pointer;
 	text-align: center;
-	pointer-events: auto;
 	color: #333;
 	border: 0;
-	border-radius: 1.85em;
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-size: 0.885em;
-	padding: 1em 2em;
 	margin: 0 auto;
-	background: rgba(251, 224, 148, 0.8);
-	-webkit-transition: background 0.3s, opacity 0.3s;
-	transition: background 0.3s, opacity 0.3s;
+	/*background: rgba(251, 224, 148, 0.8);*/
+/*	-webkit-transition: background 0.3s, opacity 0.3s;
+	transition: background 0.3s, opacity 0.3s;*/
 }
 
-.btn:focus {
-	outline: none;
-}
 
-.btn:hover {
-	background: rgba(251, 224, 148, 1);
-}
+
+
 
 .btn--trigger {
 	width: 15em;
@@ -61,11 +53,7 @@ src: url('flesh.TTF');
 
 /* Links */
 
-a {
-	text-decoration: none;
-	color: #fbe094;
-	outline: none;
-}
+
 
 /* Demo colors */
 .demo-2 a {}
@@ -93,8 +81,8 @@ a {
 .demo-5 .github-icon { fill: #8a74a0;}
 
 .demo-6 a { color: #F5F21F; }
-.demo-6 .btn { background: rgba(33, 35, 35, 0.7); color: #fff; }
-.demo-6 .btn:hover { background: rgba(33, 35, 35, 1); }
+/*.demo-6 .btn { background: rgba(33, 35, 35, 0.7); color: #fff; }*/
+/*.demo-6 .btn:hover { background: rgba(33, 35, 35, 1); }*/
 .demo-6 .trigger-headline { color: #1D1D1C;}
 .demo-6 .github-icon { fill: #F5F21F;}
 
@@ -161,7 +149,6 @@ a:focus {
 	position: absolute;
 	font-size: 6vw;
 	text-transform: uppercase;
-	pointer-events: none;
 	line-height: 1;
 	width: 100%;
 	height: 100%;
