--- a/team/css/set1.css
+++ b/team/css/set1.css
@@ -14,7 +14,8 @@
 body{
 	background: url('../img/bg.jpg');
 	background-size: cover;
-	background-attachment: fixed
+	background-attachment: fixed;
+	overflow-x:hidden 
 }
 
 
@@ -181,4 +182,8 @@ figure.effect-chico:hover p {
 		margin: 10px auto;
 		width: 100%;
 	}
+}
+
+figcaption p {
+	font-size: 5em;
 }
