--- a/css/footer.css
+++ b/css/footer.css
@@ -6,20 +6,20 @@ footer{
     margin-top: 30px;
     color: white;
 }
-a{
+li a{
     cursor: pointer;
     color: white;
     text-decoration: none;
 }
-a:hover{
+li a:hover{
     color: white;
     text-decoration: none;
 }
-a:active{
+li a:active{
     color:yellow;
     text-decoration: none;
 }
-a:visited{
+li a:visited{
     color: white;
     text-decoration: none;
 }
@@ -32,6 +32,9 @@ a:visited{
     cursor: pointer;
     padding: 5px;
     font-size: 30px;
+}
+.logo a{
+    color: white;
 }
 .logo:hover a{
     color:#1e2023;
@@ -61,4 +64,7 @@ ul{
     font-size: 12px;
     color: white;
     margin-bottom: 40px;
+}
+span b{
+    color:black;
 }
