--- a/subevents/litmuse/css/base.css
+++ b/subevents/litmuse/css/base.css
@@ -189,6 +189,7 @@ button:focus {
     opacity: 1;
     position: relative;
     text-align: right;
+    margin-top: 3vh;
 }
 
 .menu__toggle {
@@ -480,6 +481,7 @@ button:focus {
     }
     .menu__inner {
         padding: 4rem 4rem 0 0;
+        margin-top: 3vh;
     }
     .facts {
         position: relative;
