--- a/events/css/base.css
+++ b/events/css/base.css
@@ -13,7 +13,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,su
 #linkToEvent {
 	position: absolute;
 	font-size: 1.5em;
-	z-index: 1000000;
+	z-index: 10000;
 	height: 40px;
 	width: 150px;
 	background-color: #1c1c31;
@@ -176,4 +176,5 @@ main {
 
 
 }
+
 
