--- a/team/css/navbar.css
+++ b/team/css/navbar.css
@@ -135,3 +135,10 @@
         font-size: 42px;
     }
 }
+
+@media only screen and (max-width: 500px) {
+    .navbar {
+        z-index: 999999;
+        background-color: black;
+    }
+}
