--- a/events/css/base.css
+++ b/events/css/base.css
@@ -99,6 +99,11 @@ button:focus {
 .icon--keyboard {
 	display: none;
 }
+.main_logo{
+	width: 140px;
+	margin-top:-2vw;
+	margin-left: -4vw;
+}
 
 main {
 	position: relative;
@@ -175,6 +180,11 @@ main {
 
 	#linkToEvent{
 		left: 30vw;
+	}
+	.main_logo{
+		width: 110px;
+		margin-top:-30px;
+
 	}
 
 }
