--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,10 @@ footer{
     margin-top: 5vh;
     background-color:#1e2023;
 }
+.footer_logo{
+    width: 120px;
+    margin-left: 20px;
+}
 .logo_contact_div{
     margin-top: 30px;
     color: white;
