--- a/team/css/demo.css
+++ b/team/css/demo.css
@@ -13,7 +13,13 @@ body {
 /* Buttons */
 
 
+.main_logo{
+		width: 110px;
+		margin-top:-30px;
 
+	}
+
+	
 @font-face {
 font-family: flesh;
 src: url('flesh.TTF');
