Schedule Navbar, footer

--- a/schedule/style.css
+++ b/schedule/style.css
@@ -9,9 +9,10 @@
 	}
 
   	body{
-  		background-image: url("../img/schedule_bg.jpg");
+  		background-image: url("./img/schedule_bg.jpg");
   		background-size: cover;
   		background-position: center;
   		background-repeat: no-repeat;
   		background-attachment: fixed;
+      overflow-x: hidden;
   	}
