--- a/schedule/css/styles.css
+++ b/schedule/css/styles.css
@@ -1,3 +1,9 @@
+html,body{
+  padding:0;
+  margin: 0;
+  width: 100%;
+}
+
 body { background: #f5f5f5; }
 
 img { border: 0; max-width: 100%; }
@@ -183,7 +189,7 @@ margin:5px;
     left: 40px;
   }
   
-  .tldate { width: 25%; }
+  .tldate { width: 25%;min-width: 200px; }
 
   ul.timeline li .timeline-panel {
     width: calc(100% - 90px);
